style update + slug

--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -52,3 +52,10 @@
 .p-about {
   text-align: justify !important;
 }
+
+.login {
+  margin-bottom: 0px;
+}
+.login > .form-group {
+  margin-bottom: 0px;
+}
